--- a/Genie.css
+++ b/Genie.css
@@ -1,5 +1,5 @@
 /* Imports */
-@import "https://monstrousdev.github.io/themes/phoenix-bundle/base.css";
+@import "https://raw.githubusercontent.com/DJ-JR30/Discord-Themes-and-Plugins/themes/base.css";
 
 
 /* Variables */
